# serializer version: 1
# name: TestAsyncDeletion.test_delete_auxilary_models_via_team
  '''
  
  ALTER TABLE sharded_events ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND (joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
         OR joinGet(posthog_test.async_deletion_run, 'id', team_id, 1, toString(person_id)) > 0)
  '''
# ---
# name: TestAsyncDeletion.test_delete_auxilary_models_via_team.1
  '''
  
  ALTER TABLE person ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_auxilary_models_via_team.2
  '''
  
  ALTER TABLE person_distinct_id ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_auxilary_models_via_team.3
  '''
  
  ALTER TABLE person_distinct_id2 ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_auxilary_models_via_team.4
  '''
  
  ALTER TABLE groups ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_auxilary_models_via_team.5
  '''
  
  ALTER TABLE cohortpeople ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_auxilary_models_via_team.6
  '''
  
  ALTER TABLE person_static_cohort ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_auxilary_models_via_team.7
  '''
  
  ALTER TABLE plugin_log_entries ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_auxilary_models_via_team_unrelated
  '''
  
  ALTER TABLE sharded_events ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND (joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
         OR joinGet(posthog_test.async_deletion_run, 'id', team_id, 1, toString(person_id)) > 0)
  '''
# ---
# name: TestAsyncDeletion.test_delete_auxilary_models_via_team_unrelated.1
  '''
  
  ALTER TABLE person ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_auxilary_models_via_team_unrelated.2
  '''
  
  ALTER TABLE person_distinct_id ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_auxilary_models_via_team_unrelated.3
  '''
  
  ALTER TABLE person_distinct_id2 ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_auxilary_models_via_team_unrelated.4
  '''
  
  ALTER TABLE groups ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_auxilary_models_via_team_unrelated.5
  '''
  
  ALTER TABLE cohortpeople ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_auxilary_models_via_team_unrelated.6
  '''
  
  ALTER TABLE person_static_cohort ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_auxilary_models_via_team_unrelated.7
  '''
  
  ALTER TABLE plugin_log_entries ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_cohortpeople
  '''
  SELECT count()
  FROM cohortpeople
  '''
# ---
# name: TestAsyncDeletion.test_delete_cohortpeople_version
  '''
  SELECT count()
  FROM cohortpeople
  '''
# ---
# name: TestAsyncDeletion.test_delete_person
  '''
  
  ALTER TABLE sharded_events ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND (joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
         OR joinGet(posthog_test.async_deletion_run, 'id', team_id, 1, toString(person_id)) > 0)
  '''
# ---
# name: TestAsyncDeletion.test_delete_person_unrelated
  '''
  
  ALTER TABLE sharded_events ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND (joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
         OR joinGet(posthog_test.async_deletion_run, 'id', team_id, 1, toString(person_id)) > 0)
  '''
# ---
# name: TestAsyncDeletion.test_delete_teams
  '''
  
  ALTER TABLE sharded_events ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND (joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
         OR joinGet(posthog_test.async_deletion_run, 'id', team_id, 1, toString(person_id)) > 0)
  '''
# ---
# name: TestAsyncDeletion.test_delete_teams.1
  '''
  
  ALTER TABLE person ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_teams.2
  '''
  
  ALTER TABLE person_distinct_id ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_teams.3
  '''
  
  ALTER TABLE person_distinct_id2 ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_teams.4
  '''
  
  ALTER TABLE groups ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_teams.5
  '''
  
  ALTER TABLE cohortpeople ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_teams.6
  '''
  
  ALTER TABLE person_static_cohort ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_teams.7
  '''
  
  ALTER TABLE plugin_log_entries ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_teams_unrelated
  '''
  
  ALTER TABLE sharded_events ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND (joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
         OR joinGet(posthog_test.async_deletion_run, 'id', team_id, 1, toString(person_id)) > 0)
  '''
# ---
# name: TestAsyncDeletion.test_delete_teams_unrelated.1
  '''
  
  ALTER TABLE person ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_teams_unrelated.2
  '''
  
  ALTER TABLE person_distinct_id ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_teams_unrelated.3
  '''
  
  ALTER TABLE person_distinct_id2 ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_teams_unrelated.4
  '''
  
  ALTER TABLE groups ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_teams_unrelated.5
  '''
  
  ALTER TABLE cohortpeople ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_teams_unrelated.6
  '''
  
  ALTER TABLE person_static_cohort ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_delete_teams_unrelated.7
  '''
  
  ALTER TABLE plugin_log_entries ON CLUSTER 'posthog'
  DELETE
  WHERE team_id IN [1, 2, 3, 4, 5 /* ... */]
    AND joinGet(posthog_test.async_deletion_run, 'id', team_id, 0, toString(team_id)) > 0
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_person
  '''
  
  SELECT DISTINCT team_id,
                  person_id
  FROM events
  WHERE (team_id = 2
         AND person_id = '00000000-0000-0000-0000-000000000000')
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_person_when_not_done
  '''
  
  SELECT DISTINCT team_id,
                  person_id
  FROM events
  WHERE (team_id = 2
         AND person_id = '00000000-0000-0000-0000-000000000000')
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_team_when_not_done
  '''
  
  SELECT DISTINCT team_id
  FROM events
  WHERE team_id = 2
  '''
# ---
# name: TestAsyncDeletion.test_mark_team_deletions_done
  '''
  
  SELECT DISTINCT team_id
  FROM events
  WHERE team_id = 2
  '''
# ---
